dev:change: Added some links

--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -33,14 +33,14 @@ block content
 					.flex-container
 						.flex-row
 							.dl--segment.col-xs-6
-								a(href="#")
+								a(href="http://citaone.logo-net.co.uk/chat18/")
 									.dl--circle
 										.pic.i-brand &#xe92a;
 									div as an
 										br
 										strong Adviser
 							.dl--segment.col-xs-6
-								a(href="#")
+								a(href="http://citaone.logo-net.co.uk/chat18/Chat.php?w=250")
 									.dl--circle
 										.pic.i-brand &#xe92a;
 									div as a
@@ -73,7 +73,7 @@ block content
 									strong Webchat
 						// Mobile webchat
 						.dl--segment.col-sm-4.mobile
-							a(href="#")
+							a(href="http://citaone.logo-net.co.uk/chat18/Chat.php?w=250")
 								.dl--circle
 									.pic.i-brand &#xe92a;
 								p Try out
@@ -87,7 +87,7 @@ block content
 									br
 									strong PQF dashboard
 						.dl--segment.col-sm-4.tablet
-							a(href="#")
+							a(href="http://www.surveygizmo.com/s3/2993823/Citizens-Advice")
 								.dl--circle
 									.pic.i-brand &#xe993;
 								p Help us improve our
@@ -99,7 +99,7 @@ block content
 									.pic.i-brand &#xe985;
 								p Test the
 									br
-									strong Energy supplier tool
+									strong Energy supplier comparison
 						.dl--segment.col-sm-4.tablet
 							a(href="#")
 								.dl--circle
