--- a/libs/template/template-site-dev.jade
+++ b/libs/template/template-site-dev.jade
@@ -69,15 +69,16 @@ html.no-js
 					h1 Policy blog
 
 		else
+
+			#stickynav.js-make-sticky
+				.branding
+					.content
+						ul
+							li
+								a.icon-local(href="locator.html") Find a local Citizens Advice
+							li(href="#")
+								a Sign in
 			header#main-nav-beta
-				#stickynav
-					.branding
-						.content
-							ul
-								li
-									a.icon-local(href="locator.html") Find a local Citizens Advice
-								li(href="#")
-									a Sign in
 				.navigation
 					.content
 						a.logo(href="#{dir}index.html")
