add: initial look at switch idea

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -535,3 +535,4 @@ div.tooltip:before {
 @import "modules/energy-comparison";
 @import "modules/digital-lab";
 @import "modules/local";
+@import "modules/switch";
