--- a/libs/jade/dev/psr/step3a.jade
+++ b/libs/jade/dev/psr/step3a.jade
@@ -15,7 +15,7 @@ block breadcrumbs
 
 block content
     .articleContent
-        h2 About you
+        h2 Benefits
 
         .flex-container.flex-row
             .col-sm-12.col-xs-12
