--- a/libs/jade/dev/psr/step7.jade
+++ b/libs/jade/dev/psr/step7.jade
@@ -15,9 +15,14 @@ block breadcrumbs
 
 block content
     .articleContent
-        h2 Emails sent
+        .callout--confirmation
+            h2 Completed
+            p Your form has been submitted to the following companies.
+            h4 #[a(href="#") Better Energy]
+            h4 #[a(href="#") Thames Water]
 
-        h3 What happens next
-        p We will contact these companies on your behalf. The utility companies will receive the emails and contact you directly with confirmation and when the changes will happen.
+        .callout--related
+            h3 What happens next
+            p We will contact these companies on your behalf. The utility companies will receive the emails and contact you directly with confirmation and when the changes will happen.
 
         p Please #[a(href="#") give us feedback] to help improve this service.
