dev:change: Removed the sidebar mockup of resolver form

--- a/libs/jade/dev/site/resolver.jade
+++ b/libs/jade/dev/site/resolver.jade
@@ -26,65 +26,9 @@ block sidebar
 		{title: "Complain to your energy supplier", href: "resolver.html"},
 	    {title: "Complain to the energy ombudsman", href: "#"},
 	    {title: "Letter to complain to an energy supplier", href: "#"},
-	    {title: "Check the prepayment meter rules your supplier has to follow", href: "#"}
+	    {title: "Check the prepayment meter rules your supplier has to follow", href: "#"},
+	    {title: "Making a complaint", href: "resolver-2.html"}
 	])
-
-	nav.section-nav
-		.well
-			label Select your energy supplier
-			.dropdown
-				select
-					option(value="") Please select
-					option(value="Affect Energy") Affect Energy
-					option(value="Avro Energy") Avro Energy
-					option(value="Bristol Energy") Bristol Energy
-					option(value="British Gas") British Gas
-					option(value="Bulb") Bulb
-					option(value="Co-operative Energy") Co-operative Energy
-					option(value="E") E
-					option(value="E.ON") E.ON
-					option(value="EBICo") EBICo
-					option(value="EDF Energy") EDF Energy
-					option(value="Economy Energy") Economy Energy
-					option(value="Ecotricity") Ecotricity
-					option(value="EnergySW") EnergySW
-					option(value="Extra Energy") Extra Energy
-					option(value="Fairerpower") Fairerpower
-					option(value="First Utility") First Utility
-					option(value="Flow Energy") Flow Energy
-					option(value="Future Energy") Future Energy
-					option(value="GB Energy Supply") GB Energy Supply
-					option(value="Glide") Glide
-					option(value="GnERGY") GnERGY
-					option(value="Go Effortless Energy") Go Effortless Energy
-					option(value="Good Energy") Good Energy
-					option(value="Green Energy (UK) plc") Green Energy (UK) plc
-					option(value="Green Star Energy") Green Star Energy
-					option(value="IRESA Limited") IRESA Limited
-					option(value="iSupplyEnergy") iSupplyEnergy
-					option(value="LoCO2 Energy") LoCO2 Energy
-					option(value="M&amp;S Energy") M&amp;S Energy
-					option(value="npower") npower
-					option(value="OVO Energy") OVO Energy
-					option(value="Octopus Energy") Octopus Energy
-					option(value="Oink Energy") Oink Energy
-					option(value="PFP Energy") PFP Energy
-					option(value="Peterborough Energy") Peterborough Energy
-					option(value="Robin Hood Energy") Robin Hood Energy
-					option(value="SSE") SSE
-					option(value="SSE Atlantic") SSE Atlantic
-					option(value="SSE Scottish Hydro") SSE Scottish Hydro
-					option(value="SSE Southern Electric") SSE Southern Electric
-					option(value="SSE Swalec") SSE Swalec
-					option(value="Sainsbury's Energy") Sainsbury's Energy
-					option(value="ScottishPower") ScottishPower
-					option(value="So Energy") So Energy
-					option(value="Southend Energy") Southend Energy
-					option(value="Spark Energy") Spark Energy
-					option(value="Telecom Plus") Telecom Plus
-					option(value="Tonik Energy") Tonik Energy
-					option(value="Utilita") Utilita
-			button Begin a complaint
 
 block content
 	.articleContent
@@ -180,9 +124,3 @@ block content
 					option(value="Utilita") Utilita
 			button.btn.right-button-icon Begin a complaint
 			img.resolver(alt="", src="#{dir}images/logo-resolver.png", width="150")
-
-		.title__subheading--footer
-			p Share this page. #[a(#) Find out more about sharing.]
-			a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
-			a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
-			a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
