dev:fix: Increased the breakpoint for digital labs

--- a/libs/modules/digital-lab.less
+++ b/libs/modules/digital-lab.less
@@ -3,7 +3,7 @@
     .tablet {
         display: none;
     }
-    @media screen and (min-width: @breakpoint-sm) {
+    @media screen and (min-width: @breakpoint-md) {
         .mobile {
             display: none;
         }
