dev: update homepage nav so it is less broken

--- a/libs/jade/dev/site/home.jade
+++ b/libs/jade/dev/site/home.jade
@@ -4,7 +4,7 @@ block settings
 	- var dir = "../../"
 	- var newfooter = true
 
-extends /template/template-site-dev.jade
+extends /template/template-site.jade
 
 block content
 		.main-container
