dev:change: Added new links and updated to use lightbulb icon

--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -89,7 +89,7 @@ block content
 				.flex-container
 					.flex-row
 						.dl--segment.col-sm-4.tablet
-							a(href="#")
+							a(href="http://webworker.casebook.demo.devops.citizensadvice.org.uk/")
 								.dl--circle
 									.pic.i-brand &#xe97b;
 								p Test the
@@ -140,9 +140,9 @@ block content
 									br
 									strong Energy supplier comparison
 						.dl--segment.col-sm-4.tablet
-							a(href="#")
+							a(href="http://citizensadvice.github.io/cab-testing/research/psr/dev/psr/step1.html")
 								.dl--circle
-									.pic.i-brand &#xe941;
+									.pic.i-brand &#xe996;
 								p Try the
 									br
 									strong Priority service register
@@ -154,14 +154,14 @@ block content
 									br
 									strong Money advice recording tool (MART)
 						.dl--segment.col-sm-4.tablet
-							a(href="#")
+							a(href="http://staging.beta.pageengine.net")
 								.dl--circle
 									.pic.i-brand &#xe96a;
 								p Design with
 									br
 									strong Page engine
 						.dl--segment.col-sm-4
-							a(href="#")
+							a(href="http://ca.fusion-universal.com/users/sign_in?PHPSESSID=136f9733f7216519fd10ac6c23f15a9a")
 								.dl--circle
 									.pic.i-brand &#xe971;
 								p Test out
