add: Added brand lightbulb icon to the docs

--- a/libs/guide/icons.less
+++ b/libs/guide/icons.less
@@ -497,6 +497,9 @@
     .brand-key .icon-brand:before {
         content: @brand-key;
     }
+    .brand-lightbulb .icon-brand:before {
+        content: @brand-lightbulb;
+    }
     .brand-life_buoy .icon-brand:before {
         content: @brand-life_buoy;
     }
