--- a/libs/jade/branding/brand-icons.jade
+++ b/libs/jade/branding/brand-icons.jade
@@ -368,6 +368,11 @@ block content
 						td key
 						td.variable @brand-key
 						td.unicode \e943
+					tr.brand-lightbulb
+						td.icon-brand
+						td lightbulb
+						td.variable @brand-lightbulb
+						td.unicode \e996
 					tr.brand-life_buoy
 						td.icon-brand
 						td life buoy
